--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </header>
     <main>
         <h1> Karel Ignacio | WDD 130</h1>
-        <img src="images/image.jpg" alt="Hello, my name is Karel Ignacio" width="200">
+        <img src="images/profile.jpg" alt="Hello, my name is Karel Ignacio" width="200">
         <p>Hello everyone! My name is Karel Ignacio, and I'm really excited to be here in this programming class. As a BYU-Idaho student, I'm eager to dive into the world of coding and explore how software is built. I have no prior programming experience, but I'm a quick learner and eager to start from scratch. I'm particularly looking forward to understanding the fundamentals of algorithms. I'm excited to learn alongside all of you and collaborate on this journey into programming!</p>
     </main>
     <footer>
