--- a/gh-repos/personal/Yes.html
+++ b/gh-repos/personal/Yes.html
@@ -7,7 +7,7 @@
 
     <h1><center>Yesss!</center></h1>
     
-    <center><img src="images/yeahhhh-rumi.gif" width="700"></center>
+    <center><img src="Personal/yeahhhh-rumi.gif" width="700"></center>
 
     <footer>
        <center><p1>Great! see you then!!</p1></center> 
