holy grail added

--- a/week02/holygrail.html
+++ b/week02/holygrail.html
@@ -15,7 +15,7 @@
     </header>
     <nav>
         <ul>
-            <li><a href="https://www.byu.edu">BYU</a></li>
+            <li><a href="https://www.byu.edu">BYU: Home</a></li>
             <li><a href="https://www.churchofjesuschrist.org">The Church of Jesus Christ of Latter-day Saints</a></li>
         </ul>
     </nav>
