holy grail added

--- a/week02/holygrail.html
+++ b/week02/holygrail.html
@@ -30,8 +30,8 @@
         </section>
     </main>
     <aside>
-        <img src="https://content.churchofjesuschrist.org/templesldsorg/bc/Temples/photo-galleries/aba-nigeria/800x500/aba-nigeria-temple-lds-248708-high-res-print.jpg"
-            alt="Aba Nigeria Temple" width="200">
+        <img src="https://content.churchofjesuschrist.org/acp/bc/cp/SANW%20Area/Cardon%20International%20Sponsorship%20CIS/1200x675/BYU.jpg"
+            alt="Brigham Young University Campus" width="200">
     </aside>
     <footer>
         <p>😎Karel Ignacio😎</p>
