--- a/week02/index.html
+++ b/week02/index.html
@@ -4,6 +4,8 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
         <title>Karel Ignacio | WDD130</title>
+        <meta name="description" content="Describe your name, the course, the purpose of the page.">
+        <meta name="author" content="your name">
         <link rel="stylesheet" href="styles/styles.css">
     </head>
     <body>
@@ -18,6 +20,11 @@
         <img src="images/profile.jpg" alt="Hello, my name is Karel Ignacio" width="200">
         <p>Hello everyone! My name is Karel Ignacio, and I'm really excited to be here in this programming class. As a BYU-Idaho student, I'm eager to dive into the world of coding and explore how software is built. I have no prior programming experience, but I'm a quick learner and eager to start from scratch. I'm particularly looking forward to understanding the fundamentals of algorithms. I'm excited to learn alongside all of you and collaborate on this journey into programming!</p>
     </main>
+    <aside>
+        <h2>Taguig, Philippines</h2>
+        <img src="images/Forbestown_Road_BGC.jpg" alt="BGC Taguig">
+        <p>I'm from Taguig City, a dynamic and rapidly developing part of Metro Manila, Philippines. It's famous for Bonifacio Global City (BGC), a modern hub with skyscrapers, shopping, and dining, and also holds historical significance like the Libingan ng mga Bayani. It's a vibrant mix of urban life and community.</p>
+    </aside>
     <footer>
         <p>©️2025 😎Karel Ignacio😎 Manila, Philippines</p>
     </footer>
