--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <aside>
         <h2>Taguig, Philippines</h2>
         <img src="images/Forbestown_Road_BGC.jpg" alt="BGC Taguig">
-        <p>I'm from Taguig City, a dynamic and rapidly developing part of Metro Manila, Philippines. It's famous for Bonifacio Global City (BGC), a modern hub with skyscrapers, shopping, and dining, and also holds historical significance like the Libingan ng mga Bayani. It's a vibrant mix of urban life and community.</p>
+        <p>I'm from Taguig City, its a dynamic and rapidly developing part of Metro Manila, Philippines. It's famous for Bonifacio Global City (BGC), a modern hub with skyscrapers, shopping, and dining, and also holds historical significance like the Libingan ng mga Bayani. It's a vibrant mix of urban life and community.</p>
     </aside>
     <footer>
         <p>©️2025 😎Karel Ignacio😎 Manila, Philippines</p>
